// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericCallParamsMatcher Should match snapshot for all component types 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:focus,
.c0:hover,
.c0:visited,
.c0:link,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  height: 1.6rem;
  width: 1.6rem;
}

.c5 {
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  line-height: 0;
}

.c6 {
  margin-left: 6px;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c2 {
  color: #A1A6B0;
  overflow-wrap: break-word;
}

<div>
   
  <a
    class="c0"
    href="/"
  >
    <div
      class="c1 c2"
    >
      <span
        class="c3"
      >
        <img
          alt="Avatar"
          class="c4 c5"
          data-testid="avatar"
          size="16"
          src="test"
        />
        <span
          class="c6"
        >
          test.eth
        </span>
      </span>
       
      <svg
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
        />
        <polyline
          points="15 3 21 3 21 9"
        />
        <line
          x1="10"
          x2="21"
          y1="14"
          y2="3"
        />
      </svg>
    </div>
  </a>
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 2`] = `
<div>
   
  1000000000000000000
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 3`] = `
<div>
   
  1
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 4`] = `
<div>
   
  Sunday, May 29, 2022 6:17 PM UTC
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 5`] = `
<div>
   
  52 years
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 6`] = `
<div>
   
  false
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 7`] = `
<div>
   
  1
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 8`] = `
<div>
   
  QmXk294ZQebU6J7yYpAhBqBPaMquCKxGmGoNHLBpvUJ9on
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 9`] = `
<div>
   
  Test String
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:focus,
.c0:hover,
.c0:visited,
.c0:link,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  height: 1.6rem;
  width: 1.6rem;
}

.c5 {
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  line-height: 0;
}

.c6 {
  margin-left: 6px;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c2 {
  color: #A1A6B0;
  overflow-wrap: break-word;
}

<div>
   
  <span
    matchedparam="addressParam"
    style="display: inline-block;"
  >
    <a
      class="c0"
      href="/"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          <img
            alt="Avatar"
            class="c4 c5"
            data-testid="avatar"
            size="16"
            src="test"
          />
          <span
            class="c6"
          >
            test.eth
          </span>
        </span>
         
        <svg
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </div>
    </a>
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 2`] = `
<div>
   
  <span
    matchedparam="integerParam"
    style="display: inline-block;"
  >
    1000000000000000000
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 3`] = `
<div>
   
  <span
    matchedparam="decimalParam"
    style="display: inline-block;"
  >
    1
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 4`] = `
<div>
   
  <span
    matchedparam="dateParam"
    style="display: inline-block;"
  >
    Sunday, May 29, 2022 6:17 PM UTC
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 5`] = `
<div>
   
  <span
    matchedparam="timeParam"
    style="display: inline-block;"
  >
    52 years
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 6`] = `
<div>
   
  <span
    matchedparam="booleanParam"
    style="display: inline-block;"
  >
    false
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 7`] = `
<div>
   
  <span
    matchedparam="tokenAmountParam"
    style="display: inline-block;"
  >
    1
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 8`] = `
<div>
   
  <span
    matchedparam="contentHashParam"
    style="display: inline-block;"
  >
    QmXk294ZQebU6J7yYpAhBqBPaMquCKxGmGoNHLBpvUJ9on
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 9`] = `
<div>
   
  <span
    matchedparam="otherParam"
    style="display: inline-block;"
  >
    Test String
  </span>
   
</div>
`;
